--- a/changelog.html
+++ b/changelog.html
@@ -10,9 +10,7 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <link rel="canonical" href="https://qtpass.org/changelog">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" defer></script>
-    <![endif]-->
+    <meta name="color-scheme" content="light dark" />
     <link rel="apple-touch-icon" sizes="57x57" href="./images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./images/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="./images/apple-icon-72x72.png">
@@ -274,9 +272,10 @@
 	    <a href="https://repology.org/metapackage/qtpass">
 		    <img src="https://repology.org/badge/latest-versions/qtpass.svg" alt="latest packaged version(s)">
 	    </a>
-	    <p><small>Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-	    <a title="Travis CI" href="https://travis-ci.com/IJHack/QtPass"><img src="https://api.travis-ci.com/IJHack/QtPass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.com/IJHack/QtPass.svg?branch=master"></a>
-	    <a title="AppVeyor CI" href="https://ci.appveyor.com/project/annejan/qtpass"><img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status"/></a>
+        <p><small>Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <img src="https://github.com/IJHack/QtPass/workflows/QMake/badge.svg" alt="GitHub Build Status"/>
+        <img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status"/>
+        <p><small><a title="QtPass Sitemap" href="/sitemap">Sitemap</a></small></p>
     </footer>
 </div>
 <script type="application/ld+json">
