--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <link rel="canonical" href="https://qtpass.org">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <link rel="apple-touch-icon" sizes="57x57" href="./images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./images/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="./images/apple-icon-72x72.png">
@@ -27,6 +24,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="./images/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
+    <meta name="color-scheme" content="light dark" />
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="./images/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -114,6 +112,13 @@
         <p>
             Contrary to many Free, Libre and OpenSource password managers, pass and by extension QtPass are not bound to one user or device. Since we are based on GnuPG we have multi-key, multi recipient encryption out of the box.
             The use of external encryption devices like OpenPGP or x509/CMS based smartcards or USB tokens and per-folder ACL makes it easy to grant or take away privileges from users.
+        </p>
+
+        <p>
+            <a title="Install on Linux or FreeBSD" href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible" /></a>
+            <a title="Install on Windows" href="/downloads#Windows"><img class="compatible" src="images/win10.png" alt="Windows 10 Compatible" /></a>
+            <a title="Install on macOS" href="/downloads#macOS"><img class="compatible" src="images/macos.png" alt="OS X Compatible" /></a>
+            <a title="Install on FreeBSD" href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible" /></a>
         </p>
 
         <h2><a id="insecure-generation" class="anchor" href="#insecure-generation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Insecure Password Generation prior to 1.2.1</h2>
@@ -325,14 +330,6 @@ fi
             <li><a title="Changes in 1.0" href="/changelog.old">Changelog of 1.0 releases</a></li>
             <li><a title="Changes in beta" href="/changelog.beta">Changelog of beta releases</a></li>
         </ul>
-
-        <p>
-            <br />
-            <a title="Install on Linux or FreeBSD" href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible" /></a>
-            <a title="Install on Windows" href="/downloads#Windows"><img class="compatible" src="images/win10.png" alt="Windows 10 Compatible" /></a>
-            <a title="Install on macOS" href="/downloads#macOS"><img class="compatible" src="images/macos.png" alt="OS X Compatible" /></a>
-            <a title="Install on FreeBSD" href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible" /></a>
-        </p>
     </section>
     <footer>
         <p>This project is maintained by <a title="IJhack on GitHub" href="https://github.com/IJHack">IJHack</a></p>
@@ -340,10 +337,10 @@ fi
         <a href="https://repology.org/metapackage/qtpass">
             <img src="https://repology.org/badge/latest-versions/qtpass.svg" alt="latest packaged version(s)">
         </a>
-        <p><small>Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
-            <small><a title="QtPass sitemap" href="/sitemap">sitemap</a></small></p>
-        <img src="https://api.travis-ci.com/IJHack/QtPass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.com/IJHack/QtPass.svg?branch=master">
+        <p><small>Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <img src="https://github.com/IJHack/QtPass/workflows/QMake/badge.svg" alt="GitHub Build Status"/>
         <img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status"/>
+        <p><small><a title="QtPass Sitemap" href="/sitemap">Sitemap</a></small></p>
     </footer>
 </div>
 <script type="application/ld+json">
