--- a/changelog.1.1.html
+++ b/changelog.1.1.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <link rel="canonical" href="https://qtpass.org/changelog.1.1">
+    <meta name="color-scheme" content="light dark" />
     <link rel="apple-touch-icon" sizes="57x57" href="./images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./images/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="./images/apple-icon-72x72.png">
