--- a/downloads.html
+++ b/downloads.html
@@ -76,7 +76,7 @@
 <div class="wrapper">
     <header>
         <h1>QtPass <small>1.4</small></h1>
-        <p>QtPass is a multi-platform GUI for <a href="https://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
+        <p><a title="QtPass GUI for pass, the standard UNIX password manager" href="https://qtpass.org/">QtPass</a> is a multi-platform GUI for <a title="pass, the standard unix password manager" href="https://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
             <a href="https://github.com/IJHack/QtPass">View the Project on GitHub <small>IJHack/QtPass</small></a>
