Dots without an i

--- a/downloads.html
+++ b/downloads.html
@@ -101,43 +101,43 @@
         <h3><a id="linux-bsd" class="anchor" href="#linux-bsd" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Linux / BSD</h3>
 
         <h4 id="Arch">Arch </h4>
-        Latest <a title="Arch Linux QtPass package" href="https://www.archlinux.org/packages/community/x86_64/qtpass/">stable</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/arch/qtpass.svg" alt="Arch package"></a> and <a title="Arch QtPass git package" href="https://aur.archlinux.org/packages/qtpass-git">git</a> on <a title="Arch AUR" href="https://aur.archlinux.org/">aur</a> <a href="https://repology.org/metapackage/qtpass"> <img src="https://repology.org/badge/version-only-for-repo/aur/qtpass.svg" alt="AUR package"></a>.
+        Latest <a title="Arch Linux QtPass package" href="https://www.archlinux.org/packages/community/x86_64/qtpass/">stable</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/arch/qtpass.svg" alt="Arch package"></a> and <a title="Arch QtPass git package" href="https://aur.archlinux.org/packages/qtpass-git">git</a> on <a title="Arch AUR" href="https://aur.archlinux.org/">aur</a> <a href="https://repology.org/metapackage/qtpass"> <img src="https://repology.org/badge/version-only-for-repo/aur/qtpass.svg" alt="AUR package"></a>
 	<pre><code>pacman -S qtpass</code></pre>
         <pre><code>packer qtpass</code></pre>
         <pre><code>yaourt -S qtpass</code></pre>
 
         <h4 id="rpm">OpenSUSE, Fedora &amp; CentOS</h4>
-        Via <a title="SuSE Open Build System" href="https://build.opensuse.org/package/repositories/security/QtPass">OBS</a> and <a title="Fedora QtPass package" href="https://admin.fedoraproject.org/pkgdb/package/rpms/qtpass/">Fedora</a> package db up to <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/fedora_rawhide/qtpass.svg" alt="Fedora Rawhide package"></a>.
+        Via <a title="SuSE Open Build System" href="https://build.opensuse.org/package/repositories/security/QtPass">OBS</a> and <a title="Fedora QtPass package" href="https://admin.fedoraproject.org/pkgdb/package/rpms/qtpass/">Fedora</a> package db up to <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/fedora_rawhide/qtpass.svg" alt="Fedora Rawhide package"></a>
         <pre><code>zypper install qtpass</code></pre>
         <pre><code>yum install qtpass</code></pre>
         <pre><code>dnf install qtpass</code></pre>
 
         <h4 id="deb">Debian, Ubuntu and derivates like Kali &amp; Raspbian</h4>
-        In amongst others <a title="Debian QtPass in stable" href="https://packages.debian.org/stretch/qtpass">stable</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_13/qtpass.svg" alt="Debian Stable package"></a>, <a title="Debian QtPass in unstable" href="https://packages.debian.org/unstable/utils/qtpass">sid</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_unstable/qtpass.svg" alt="Debian Unstable package"></a> and <a title="Ubuntu QtPass in Mantic Minotaur" href="https://packages.ubuntu.com/mantic/utils/qtpass">Mantic Minotaur</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/ubuntu_23_10/qtpass.svg" alt="Ubuntu 23.10 package"></a>.
+        In amongst others <a title="Debian QtPass in stable" href="https://packages.debian.org/stretch/qtpass">stable</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_13/qtpass.svg" alt="Debian Stable package"></a>, <a title="Debian QtPass in unstable" href="https://packages.debian.org/unstable/utils/qtpass">sid</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_unstable/qtpass.svg" alt="Debian Unstable package"></a> and <a title="Ubuntu QtPass in Mantic Minotaur" href="https://packages.ubuntu.com/mantic/utils/qtpass">Mantic Minotaur</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/ubuntu_23_10/qtpass.svg" alt="Ubuntu 23.10 package"></a>
         <pre><code>apt install qtpass</code></pre>
 
         <h4 id="Gentoo">Gentoo</h4>
-        Source build <a title="Gentoo ebuild" href="https://packages.gentoo.org/packages/app-admin/qtpass">package</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/gentoo/qtpass.svg" alt="Gentoo package"></a>.
+        Source build <a title="Gentoo ebuild" href="https://packages.gentoo.org/packages/app-admin/qtpass">package</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/gentoo/qtpass.svg" alt="Gentoo package"></a>
         <pre><code>emerge -atv qtpass</code></pre>
 
         <h4 id="Void">Void</h4>
-        Has a nie xbps <a title="Void Linux QtPass package" href="https://www.voidlinux.eu/packages/">package</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/void_x86_64/qtpass.svg" alt="Void Linux x86_64 package"></a>.
+        Has a nie xbps <a title="Void Linux QtPass package" href="https://www.voidlinux.eu/packages/">package</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/void_x86_64/qtpass.svg" alt="Void Linux x86_64 package"></a>
         <pre><code>xbps-install -Su qtpass</code></pre>
 
         <h4 id="NixOS">NixOS</h4>
-        One of the first to addopt QtPass <a title="NixOS QtPass packages" href="https://nixos.org/nixos/packages.html">packages</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/nix_stable_23_05/qtpass.svg" alt="nixpkgs stable package"></a>.
+        One of the first to addopt QtPass <a title="NixOS QtPass packages" href="https://nixos.org/nixos/packages.html">packages</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/nix_stable_23_05/qtpass.svg" alt="nixpkgs stable package"></a>
         <pre><code>nix-env -iA nixos.pkgs.qtpass</code></pre>
 
         <h4 id="Soleus">Soleus Project</h4>
-        Has a stable <a title="Soleus QtPass package" href="https://git.solus-project.com/packages/qtpass/">package</a> for QtPass <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/solus/qtpass.svg" alt="Solus package"></a>.
+        Has a stable <a title="Soleus QtPass package" href="https://git.solus-project.com/packages/qtpass/">package</a> for QtPass <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/solus/qtpass.svg" alt="Solus package"></a>
         <pre><code>eopkg install qtpass</code></pre>
 
         <h4 id="Slackware">Slackware</h4>
-        Via <a title="SlackBuilds package" href="https://slackbuilds.org/repository/14.2/desktop/qtpass/?search=qtpass">SlackBuilds</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/slackbuilds/qtpass.svg" alt="SlackBuilds package"></a>.
+        Via <a title="SlackBuilds package" href="https://slackbuilds.org/repository/14.2/desktop/qtpass/?search=qtpass">SlackBuilds</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/slackbuilds/qtpass.svg" alt="SlackBuilds package"></a>
         <pre><code>cd qtpass &amp;&amp; chmod +x qtpass.SlackBuild &amp;&amp; ./qtpass.SlackBuild</code></pre>
 
         <h4 id="FreeBSD">FreeBSD</h4>
-        Available as package and in the FreeBSD <a title="QtPass FreeBSD port" href="https://www.freshports.org/sysutils/qtpass/">ports</a> repository <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/freebsd/qtpass.svg" alt="FreeBSD port"></a>.
+        Available as package and in the FreeBSD <a title="QtPass FreeBSD port" href="https://www.freshports.org/sysutils/qtpass/">ports</a> repository <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/freebsd/qtpass.svg" alt="FreeBSD port"></a>
         <pre><code>pkg install qtpass</code></pre>
         <pre><code>cd /usr/ports/sysutils/qtpass/ &amp;&amp; make install clean</code></pre>
 
@@ -145,18 +145,18 @@
 
         <a class="app windows" href="https://github.com/IJHack/QtPass/releases/download/v1.4.0/qtpass-1.4.0.exe">QtPass 1.4.0</a>
 
-        <p>Latest stable on the <a href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a href="https://ci.appveyor.com/project/annejan/qtpass/build/artifacts">AppVeyor</a>.</p>
+        <p>Latest stable on the <a href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a href="https://ci.appveyor.com/project/annejan/qtpass/build/artifacts">AppVeyor</a></p>
 
-        Via <a href="https://chocolatey.org/packages/qtpass">Chocolatey</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/chocolatey/qtpass.svg" alt="Chocolatey package"></a>.
+        Via <a href="https://chocolatey.org/packages/qtpass">Chocolatey</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/chocolatey/qtpass.svg" alt="Chocolatey package"></a>
 	    <pre><code>choco install qtpass</code></pre>
 
         <h3 id="macOS"><a id="downloads-osx" class="anchor" href="#osx" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>macOS</h3>
 
         <a class="app macos" href="https://github.com/IJHack/QtPass/releases/download/v1.4.0/qtpass-1.4.0.dmg">QtPass 1.4.0</a>
 
-        <p>Latest stable on the <a href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
+        <p>Latest stable on the <a href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a href="https://annejan.com/media/qtpass.php">AnneJan</a></p>
 
-        Via <a href="https://github.com/Homebrew/homebrew-cask">Homebrew Cask</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/homebrew_casks/qtpass.svg" alt="Homebrew Casks package"></a>.
+        Via <a href="https://github.com/Homebrew/homebrew-cask">Homebrew Cask</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/homebrew_casks/qtpass.svg" alt="Homebrew Casks package"></a>
         <pre><code>brew install qtpass --cask</code></pre>
 
         <p>QtPass works best with pass and pinentry-mac installed. <pre><code>brew install pass pinentry-mac</code></pre></p>
