--- a/changelog.1.3.html
+++ b/changelog.1.3.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <link rel="canonical" href="https://qtpass.org/changelog">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
-    <meta name="color-scheme" content="light dark" />
+    <meta name="color-scheme" content="light dark">
     <link rel="apple-touch-icon" sizes="57x57" href="./images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./images/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="./images/apple-icon-72x72.png">
@@ -41,7 +41,7 @@
     <meta name="twitter:url" content="https://qtpass.org/">
     <meta name="twitter:image" content="https://qtpass.org/images/qtpass.png">
     <meta name="twitter:image:src" content="https://qtpass.org/images/icon.svg">
-    <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher" />
+    <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher">
 <script type="application/ld+json">
 {
   "@context" : "https://schema.org",
@@ -89,8 +89,8 @@
         </ul>
 
         <div class="screenshots">
-            <img id="qtpass" src="images/qtpass.png" alt="QtPass MainWindow" />
-            <img id="config" class="hidden" src="images/config.png" alt="QtPass Configuration" />
+            <img id="qtpass" src="images/qtpass.png" alt="QtPass MainWindow">
+            <img id="config" class="hidden" src="images/config.png" alt="QtPass Configuration">
         </div>
 
     </header>
@@ -168,10 +168,10 @@
 
         <p>
             <br />
-            <a title="Install on Linux or FreeBSD" href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible" /></a>
-            <a title="Install on Windows" href="/downloads#Windows"><img class="compatible" src="images/win11.png" alt="Windows 11 Compatible" /></a>
-            <a title="Install on macOS" href="/downloads#macOS"><img class="compatible" src="images/macos.png" alt="OS X Compatible" /></a>
-            <a title="Install on FreeBSD" href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible" /></a>
+            <a title="Install on Linux or FreeBSD" href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible"></a>
+            <a title="Install on Windows" href="/downloads#Windows"><img class="compatible" src="images/win11.png" alt="Windows 11 Compatible"></a>
+            <a title="Install on macOS" href="/downloads#macOS"><img class="compatible" src="images/macos.png" alt="OS X Compatible"></a>
+            <a title="Install on FreeBSD" href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible"></a>
         </p>
     </section>
     <footer>
@@ -181,8 +181,8 @@
             <img src="https://repology.org/badge/latest-versions/qtpass.svg" alt="latest packaged version(s)">
         </a>
         <p><small>Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-        <img src="https://github.com/IJHack/QtPass/workflows/QMake/badge.svg" alt="GitHub Build Status"/>
-        <img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status"/>
+        <img src="https://github.com/IJHack/QtPass/workflows/QMake/badge.svg" alt="GitHub Build Status
+        <img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status
         <p><small><a title="QtPass Sitemap" href="/sitemap">Sitemap</a></small></p>
     </footer>
 </div>
