--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="./images/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
-    <meta name="color-scheme" content="light dark" />
+    <meta name="color-scheme" content="light dark">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="./images/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -43,7 +43,7 @@
     <meta name="twitter:url" content="https://qtpass.org/">
     <meta name="twitter:image" content="https://qtpass.org/images/og.png">
     <meta name="twitter:image:src" content="https://qtpass.org/images/icon.svg">
-    <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher" />
+    <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher">
 <script type="application/ld+json">
 {
   "@context" : "https://schema.org",
@@ -91,8 +91,8 @@
         </ul>
 
         <div class="screenshots">
-            <img id="qtpass" src="images/qtpass.png" alt="QtPass MainWindow" />
-            <img id="config" class="hidden" src="images/config.png" alt="QtPass Configuration" />
+            <img id="qtpass" src="images/qtpass.png" alt="QtPass MainWindow">
+            <img id="config" class="hidden" src="images/config.png" alt="QtPass Configuration">
         </div>
 
     </header>
@@ -115,10 +115,10 @@
         </p>
 
         <p>
-            <a title="Install on Linux or FreeBSD" href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible" /></a>
-            <a title="Install on Windows" href="/downloads#Windows"><img class="compatible" src="images/win11.png" alt="Windows 11 Compatible" /></a>
-            <a title="Install on macOS" href="/downloads#macOS"><img class="compatible" src="images/macos.png" alt="OS X Compatible" /></a>
-            <a title="Install on FreeBSD" href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible" /></a>
+            <a title="Install on Linux or FreeBSD" href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible"></a>
+            <a title="Install on Windows" href="/downloads#Windows"><img class="compatible" src="images/win11.png" alt="Windows 11 Compatible"></a>
+            <a title="Install on macOS" href="/downloads#macOS"><img class="compatible" src="images/macos.png" alt="OS X Compatible"></a>
+            <a title="Install on FreeBSD" href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible"></a>
         </p>
 
         <h2><a id="insecure-generation" class="anchor" href="#insecure-generation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Insecure Password Generation prior to 1.2.1</h2>
@@ -338,8 +338,8 @@ fi
             <img src="https://repology.org/badge/latest-versions/qtpass.svg" alt="latest packaged version(s)">
         </a>
         <p><small>Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-        <img src="https://github.com/IJHack/QtPass/workflows/QMake/badge.svg" alt="GitHub Build Status"/>
-        <img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status"/>
+        <img src="https://github.com/IJHack/QtPass/workflows/QMake/badge.svg" alt="GitHub Build Status">
+        <img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status">
         <p><small><a title="QtPass Sitemap" href="/sitemap">Sitemap</a></small></p>
     </footer>
 </div>
