--- a/downloads.html
+++ b/downloads.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <link rel="canonical" href="https://qtpass.org/downloads">
-    <meta name="color-scheme" content="light dark" />
+    <meta name="color-scheme" content="light dark">
     <link rel="apple-touch-icon" sizes="57x57" href="./images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./images/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="./images/apple-icon-72x72.png">
@@ -41,7 +41,7 @@
     <meta name="twitter:url" content="https://qtpass.org/">
     <meta name="twitter:image" content="https://qtpass.org/images/qtpass.png">
     <meta name="twitter:image:src" content="https://qtpass.org/images/icon.svg">
-    <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher" />
+    <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher">
     <script type="application/ld+json">
 {
   "@context" : "https://schema.org",
@@ -89,8 +89,8 @@
         </ul>
 
         <div class="screenshots">
-            <img id="qtpass" src="images/qtpass.png" alt="QtPass MainWindow" />
-            <img id="config" class="hidden" src="images/config.png" alt="QtPass Configuration" />
+            <img id="qtpass" src="images/qtpass.png" alt="QtPass MainWindow">
+            <img id="config" class="hidden" src="images/config.png" alt="QtPass Configuration">
         </div>
 
     </header>
@@ -193,10 +193,10 @@ qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app</code></pre>
 
         <p>
             <br />
-            <a title="Install on Linux or FreeBSD" href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible" /></a>
-            <a title="Install on Windows" href="/downloads#Windows"><img class="compatible" src="images/win11.png" alt="Windows 11 Compatible" /></a>
-            <a title="Install on macOS" href="/downloads#macOS"><img class="compatible" src="images/macos.png" alt="OS X Compatible" /></a>
-            <a title="Install on FreeBSD" href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible" /></a>
+            <a title="Install on Linux or FreeBSD" href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible"></a>
+            <a title="Install on Windows" href="/downloads#Windows"><img class="compatible" src="images/win11.png" alt="Windows 11 Compatible"></a>
+            <a title="Install on macOS" href="/downloads#macOS"><img class="compatible" src="images/macos.png" alt="OS X Compatible"></a>
+            <a title="Install on FreeBSD" href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible"></a>
         </p>
     </section>
     <footer>
